<?xml version="1.0" encoding="utf-8"?>
<!--
 * Copyright (c) 2009, Code Aurora Forum. All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *    * Redistributions of source code must retain the above copyright
 *      notice, this list of conditions and the following disclaimer.
 *    * Redistributions in binary form must reproduce the above copyright
 *      notice, this list of conditions and the following disclaimer in the
 *      documentation and/or other materials provided with the distribution.
 *    * Neither the name of Code Aurora nor
 *      the names of its contributors may be used to endorse or promote
 *      products derived from this software without specific prior written
 *      permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
 * NON-INFRINGEMENT ARE DISCLAIMED.  IN NO EVENT SHALL THE COPYRIGHT OWNER OR
 * CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL,
 * EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
 * PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS;
 * OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
 * WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR
 * OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 * ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                 android:key="mainsettings"
                 android:title="@string/settings_menu">

  <ListPreference
      android:entryValues="@array/regional_band_values"
      android:entries="@array/regional_band_entries"
      android:title="@string/regional_band"
      android:key="regional_band"
      android:dialogTitle="@string/sel_band_menu"
      android:defaultValue="@string/default_band">
  </ListPreference>

  <ListPreference
      android:title="@string/aud_output_mode"
      android:dialogTitle="@string/sel_audio_output"
      android:key="audio_output_mode"
      android:entryValues="@array/ster_mon_values"
      android:entries="@array/ster_mon_entries" android:defaultValue="@string/default_audio">
  </ListPreference>

  <ListPreference
    android:entryValues="@array/record_duration_values"
    android:dialogTitle="@string/sel_rec_dur"
    android:entries="@array/record_durations_entries"
    android:key="record_duration"
    android:title="@string/record_dur"
    android:defaultValue="@string/default_record_duration">
    </ListPreference>

    <CheckBoxPreference
        android:key="af_checkbox_preference"
        android:title="@string/auto_select_af"
        android:summaryOn="@string/auto_select_af_enabled"
        android:summaryOff="@string/auto_select_af_disabled"
     />

    <PreferenceCategory>
  <Preference
    android:title="Revert to Factory Defaults"
    android:key="revert_to_fac"
    android:summary="@string/settings_revert_defaults_summary">
  </Preference>
  </PreferenceCategory>
</PreferenceScreen>
